# VSFDOP-Repo

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_AVAILABILITY.md  DATA_AVAILABILITY.md  LICENSE  README.md
.github/workflows/: cmake.yml
examples/: basic_vsf_dop.cpp
include/vsfdop/: geometry.hpp  vsf_dop.hpp
src/: vsf_dop.cpp
tests/: vsfdop_basic_test.cpp
